html structure made

--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sabio - Web Portfolio</title>
+    <link href="https://www.dafontfree.net/embed/ZXhhbi1yZWd1bGFyJmRhdGEvOTQ5L2UvMTkzMDM5L0V4YW4tUmVndWxhci50dGY" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="./styles/styles.css" type="text/css" charset="utf-8">
 </head>
 <body>
-    
+    <div class="navigation">
+        <div class="left-part-nav">
+            <p>WEB PORTFOLIO</p>
+        </div>
+        <div class="right-part-nav">
+            <ul class="nav-selection">
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>PROJECTS</li>
+                <li>CONTACT</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- CONTENT SECTION -->
+    <div class="content-container">
+        <div class="home page">
+            <h1>JOSEPH SABIO</h1>
+            <p>WEB DEVELOPER</p>
+            <p>CURRENTLY SEARCHING FOR<br>
+                A POSITION AS A<br>
+                WEB DESIGNER/DEVELOPER</p>
+        </div>
+
+        <div class="about page">
+            <ul class="about-selection">
+                <li>HOBBIES</li>
+                <li>SKILLS</li>
+                <li>PHILOSOPHY</li>
+            </ul>
+            <div class="hobbies sec"></div>
+            <div class="skills sec"></div>
+            <div class="philosophy sec"></div>
+        </div>
+        
+        <div class="projects page">
+
+        </div>
+
+        <div class="contact page">
+            <ul class="contact-list">
+                <li>EMAIL</li>
+                <li>GITHUB</li>
+                <li>PHONE</li>
+            </ul>
+
+            <ul class="cinfo-list">
+                <li>josephsabiosantino@gmail.com</li>
+                <li>github.com/santinojk890</li>
+                <li>(+971) 58 303 1694</li>
+            </ul>
+        </div>
+
+    </div>
 </body>
 </html>
