franny seen my changes wah

--- a/index.html
+++ b/index.html
@@ -15,25 +15,31 @@
         </div>
         <div class="right-part-nav">
             <ul class="nav-selection">
-                <li>HOME</li>
-                <li>ABOUT</li>
-                <li>PROJECTS</li>
-                <li>CONTACT</li>
+                <li class="nav-list">HOME</li>
+                <li class="nav-list">ABOUT</li>
+                <li class="nav-list">PROJECTS</li>
+                <li class="nav-list">CONTACT</li>
             </ul>
         </div>
     </div>
 
     <!-- CONTENT SECTION -->
     <div class="content-container">
-        <div class="home page">
-            <h1>JOSEPH SABIO</h1>
-            <p>WEB DEVELOPER</p>
-            <p>CURRENTLY SEARCHING FOR<br>
-                A POSITION AS A<br>
-                WEB DESIGNER/DEVELOPER</p>
+        <div class="home page" style="display: show;">
+            <div class="left-home">
+                <p class="big-header">joseph sabio</p>
+                <p class="desc">WEB DEVELOPER</p>
+                <p class="desc">CURRENTLY SEARCHING FOR<br>
+                    A POSITION AS A<br>
+                    WEB DESIGNER/DEVELOPER</p>
+            </div>
+
+            <div class="right-home">
+                <img class="main-image" src="./images/home.png" alt="Author's Photo">
+            </div>
         </div>
 
-        <div class="about page">
+        <div class="about page" style="display: none;">
             <ul class="about-selection">
                 <li>HOBBIES</li>
                 <li>SKILLS</li>
@@ -44,20 +50,20 @@
             <div class="philosophy sec"></div>
         </div>
         
-        <div class="projects page">
+        <div class="projects page" style="display: none;">
 
         </div>
 
-        <div class="contact page">
+        <div class="contact page" style="display: none;">
             <ul class="contact-list">
                 <li>EMAIL</li>
                 <li>GITHUB</li>
                 <li>PHONE</li>
             </ul>
 
-            <ul class="cinfo-list">
-                <li>josephsabiosantino@gmail.com</li>
-                <li>github.com/santinojk890</li>
+            <ul class="cinfo-list" >
+                <li>JOSEPHSABIOSANTINO@GMAIL.COM</li>
+                <li>github.cOm/sAntinOjk890</li>
                 <li>(+971) 58 303 1694</li>
             </ul>
         </div>
